attempt fix squished book images

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     width: 100% ;
     height: 73px ;
     background-color: rgb(129, 54, 24);
-    background: url(wood.jpg) no-repeat center;
+    background: url(img/wood.jpg) no-repeat center;
     background-size: cover;
     position: sticky;
     top: 0px ;
@@ -73,7 +73,7 @@
   }
 
   .parallax{
-    background: url(bookshelf.jpg) no-repeat center;
+    background: url(img/bookshelf.jpg) no-repeat center;
     background-size: cover;
     background-attachment: fixed; 
     height: 500px ;
@@ -449,7 +449,7 @@
 
   @media(max-width: 1024px){
     .parallax{
-      background: url(bookshelf.jpg) no-repeat center;
+      background: url(img/bookshelf.jpg) no-repeat center;
       background-size: cover;
       background-attachment: scroll; 
       height: 500px ;
@@ -542,10 +542,13 @@
     }
 
     .book-section{
-      height: 300px ;
+      height: 400px ;
     }
 
     .rate{
       font-size: 30px ;
+    }
+    .navbar{
+      position: relative;
     }
   }
